@@ -4,7 +4,13 @@ name := "amiable"
 
 version := "1.0-SNAPSHOT"
 
-enablePlugins(PlayScala, JDebPackaging, SystemdPlugin)
+enablePlugins(
+  PlayScala,
+  JDebPackaging,
+  SystemdPlugin,
+  DockerPlugin,
+  AshScriptPlugin
+)
 
 ThisBuild / scalaVersion := "3.3.8"
 
@@ -13,8 +19,7 @@ Universal / javaOptions ++= Seq(
   s"-Dconfig.file=/etc/${name.value}.conf",
   "-J-XX:MaxRAMPercentage=50.0",
   "-J-XX:InitialRAMPercentage=50.0",
-  "-J-XX:MaxMetaspaceSize=300m",
-  s"-J-Xlog:gc*:file=/var/log/${packageName.value}/gc.log::filecount=5,filesize=10M"
+  "-J-XX:MaxMetaspaceSize=300m"
 )
 
 Test / javaOptions += "-Dconfig.file=conf/application.test.conf"
@@ -85,3 +90,9 @@ maintainer := "Guardian Developers <dig.dev.software@theguardian.com>"
 packageSummary := "AMIable"
 packageDescription := "Web app for monitoring the use of AMIs"
 debianPackageDependencies := Seq("java-21-amazon-corretto-jdk:arm64")
+
+dockerBaseImage := "amazoncorretto:21-alpine"
+dockerExposedPorts := Seq(9000)
+dockerUpdateLatest := true
+dockerRepository := Some("guardian")
+version := sys.env.getOrElse("BUILD_NUMBER", "DEV")
